code cleanUp and refactoring